solucion da la sobreposicion de divs

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
         <div class="title">
             <h1>
-                Hello world pale blue dot<span>.</span>
+                Hello <span class="line">world</span> pale blue dot<span class="color">.</span>
             </h1>
             <p>
                 El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.
             </p>
-            <button type="submit">
-                Conocer mas
-            </button>
+            <div class="btn">
+                <a href="#">CONOCÉ MÁS</a>
+            </div>
         </div>
 
         <div class="main">
