aplicados estilos version desktop al titulo

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 Hello <span class="line">world</span> pale blue dot<span class="color">.</span>
             </h1>
             <p>
-                El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.
+                El portal de podcasts que explora el mundo de la programación y <br>la tecnología. Nuevos episodios, todos los jueves cada 15 días.
             </p>
             <div class="btn">
                 <a href="#">CONOCÉ MÁS</a>
