--- a/index.html
+++ b/index.html
@@ -67,15 +67,17 @@
         </div>
 
         <div class="main">
-            <div class="section-1">
-                <h3>
-                    Episodios
-                </h3>
+            <h3>
+                Episodios
+            </h3>            
+            <div class="section-1">                
+                
                 <div class="episode">
                     <iframe 
                         src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" 
                         width="100%" 
-                        height="232" 
+                        height="210"
+                        scrolling="no"                     
                         frameborder="0" 
                         allowtransparency="true" 
                         allow="encrypted-media">
@@ -86,7 +88,7 @@
                     <iframe 
                         src="https://open.spotify.com/embed-podcast/show/4kYCRYJ3yK5DQbP5tbfZby" 
                         width="100%" 
-                        height="232" 
+                        height="210" 
                         frameborder="0" 
                         allowtransparency="true" 
                         allow="encrypted-media">
@@ -97,7 +99,7 @@
                     <iframe 
                         src="https://open.spotify.com/embed-podcast/show/5JxcIaIkN8zx3Zy7yD9snv" 
                         width="100%" 
-                        height="232" 
+                        height="210" 
                         frameborder="0" 
                         allowtransparency="true" 
                         allow="encrypted-media">
@@ -108,7 +110,7 @@
                     <iframe 
                         src="https://open.spotify.com/embed-podcast/show/2Iibd5A6R7mxkCm4NwNmUn" 
                         width="100%" 
-                        height="232" 
+                        height="210" 
                         frameborder="0" 
                         allowtransparency="true" 
                         allow="encrypted-media">
