aplicados estilos version desktop a seccion de donde venimos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="main">
-            <h3>
+            <h3 class="h3-section-1">
                 Episodios
             </h3>            
             <div class="section-1">                
@@ -120,13 +120,18 @@
             </div>
 
             <div class="section-2">
-                <h3>
-                    De dónde Venimos
-                </h3>
-                <p>
-                    Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light. 
-                    Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.
-                </p>
+                <img src="./assets/img/phone.png" alt="imagen del telefono">
+                <div class="text">
+                    <h3 class="h3-section-2">
+                        De dónde Venimos
+                    </h3>
+                    <p>
+                        Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.                       
+                    </p>
+                    <p>
+                        Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.
+                    </p>
+                </div>
             </div>
                 
             <div class="section-3">
