aplicados estilos version desktop a seccion algunos de nuestros temas

--- a/index.html
+++ b/index.html
@@ -156,24 +156,26 @@
                     Algunos de nuestros temas
                 </h3>
                 
-                <div class="img">
-                    <img src="./assets/img/icon1.svg" alt="icono trabajo remoto">
-                    <p>Trabajo remoto</p>
-                </div>
+                <div class="images-section-4">
+                    <div class="img">
+                        <img src="./assets/img/icon1.svg" alt="icono trabajo remoto">
+                        <p>Trabajo remoto</p>
+                    </div>                
 
-                <div class="img">
-                    <img src="./assets/img/icon2.svg" alt="icono repensado progrmacion">
-                    <p>Repensando programacion</p>
-                </div>
+                    <div class="img">
+                        <img src="./assets/img/icon2.svg" alt="icono repensado progrmacion">
+                        <p>Repensando programacion</p>
+                    </div>
 
-                <div class="img">
-                    <img src="./assets/img/icon3.svg" alt="icono bases del codigo">
-                    <p>Bases del Codigo</p>
-                </div>
+                    <div class="img">
+                        <img src="./assets/img/icon3.svg" alt="icono bases del codigo">
+                        <p>Bases del Codigo</p>
+                    </div>
 
-                <div class="img">
-                    <img src="./assets/img/icon4.svg" alt="icono seguridad informatica">
-                    <p>Seguridad Informatica</p>
+                    <div class="img">
+                        <img src="./assets/img/icon4.svg" alt="icono seguridad informatica">
+                        <p>Seguridad Informatica</p>
+                    </div>
                 </div>
             </div>
 
