aplicados estilos version desktop a seccion ultimas novedades

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=IBM+Plex+Sans:wght@300&family=Roboto&display=swap" 
         rel="stylesheet"
     />
-
     <!-- Cargue del CSS -->
     <link rel="stylesheet" href="/style/style.css">
     <title>Podcast Channel</title>
@@ -181,11 +180,12 @@
 
             <div class="section-5">
                 <h3>
-                    Querés las ultimas novedades
+                    ¿Querés las ultimas novedades?
                 </h3>
-                <button type="submit">
-                    ESCUCHA LOS EPISODIOS
-                </button>
+
+                <div class="btn">
+                    <a href="#">ESCUCHÁ LOS EPISODIOS</a>
+                </div>
             </div>
 
             <div class="footer">
