--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
 
         <div class="header">
-            <img src="./assets/img/logo.svg" alt="imagen del logo del sitio">
+            <a href="#title"><img src="./assets/img/logo.svg" alt="imagen del logo del sitio"></a>
 
             <div class="nav">
                 <div class="menu">
@@ -53,14 +53,14 @@
             </div>            
         </div>
 
-        <div class="title">
+        <div class="title" id="title">
             <h1>
                 Hello <span class="line">world</span> pale blue dot<span class="color">.</span>
             </h1>
-            <p class="desktop">
+            <p class="p-desktop">
                 El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.
             </p>
-            <p class="mobile">
+            <p class="p-mobile">
                 Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
             </p>
             <div class="btn">
