--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         rel="stylesheet"
     />
     <!-- Cargue del CSS -->
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Podcast Channel</title>
 </head>
 <body>
